--- a/client/src/styles/Users.css
+++ b/client/src/styles/Users.css
@@ -14,6 +14,7 @@
 }
 
 #users .nick {
+  display: block;
   line-height: 1.25;
   white-space: nowrap;
   overflow: hidden;
